--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -27,17 +27,10 @@
                     <span></span>
                 </div>
                 <nav class="header_menu">
-                    <input type="text" id="input" class="input" title="City where you were born." />
-                    <a class="list_menuAIFPK " href="../index.html">Київ</a>
+
                     <ul class="header_list">
-                        <li class="list_menuLi"><a class="list_menuA" href="#Andrew_DescentIFP"> Андріївський
-                                Узвіз</a></li>
-                        <li class="list_menuLi"><a class="list_menuA" href="#FunicularIFP"> Київський фунікулер </a>
-                        </li>
-                        <li class="list_menuLi"><a class="list_menuA" href="#kreshatikIFP"> Хрещатик </a></li>
-                        <li class="list_menuLi"><a class="list_menuA" href="#Golden_GateIFP">Золоті ворота</a></li>
-                        <li class="list_menuLi"><a class="list_menuA" href="#Shevchenko_parkIFP">Парк імені Тараса
-                                Шевченка</a></li>
+                        <li class="list_menuLi"><a class="list_menuAIFPK " href="../index.html">Київ</a></li>
+
                     </ul>
                 </nav>
             </div>
