--- a/detail/OctoberPalace.html
+++ b/detail/OctoberPalace.html
@@ -76,7 +76,7 @@
             <h3>Реконструкція та сьогодення</h3>
 
             <p>Реконструкція почалася 1952 році й продовжувалась до 1958. Під час реконструкції будинку в 1950-х рр.
-                були знайдені обгорілі людські кістки та таємні камери для катувань.[5]
+                були знайдені обгорілі людські кістки та таємні камери для катувань.
 
                 Над відбудовою, разом з тисячами робітників, студентів та людей різних професій, працювали і видатні
                 діячі культури та мистецтва: Максим Рильський, Володимир Сосюра, Андрій Малишко, Лев Ревуцький, Авмросій
