--- a/index.html
+++ b/index.html
@@ -389,6 +389,16 @@
 				</div>
 			</article>
 
+			<article id="Samson">
+				<div class="polaroid">
+					<a href="detail/Samson.html" />
+					<img src="detail/img/Samson.jpg" class="Img" alt="">
+					<div class="container">
+						<h2> Фонтан Самсон </h2>
+					</div>
+				</div>
+			</article>
+
 		</div>
 
 		<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
