--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -90,6 +90,14 @@
                     </div>
                 </article>
 
+                <article id="SamsonIFP">
+                    <div class="polaroidIFP">
+                        <a href="/istorichniFoto/detailIFP/Samson.html" />
+                        <div class="containerIF">
+                            <h2> Фонтан Самсон </h2>
+                        </div>
+                    </div>
+                </article>
 
 
 
