--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 			<article id="Samson">
 				<div class="polaroid">
 					<a href="detail/Samson.html" />
-					<img src="detail/img/Samson.jpg" class="Img" alt="">
+					<img src="detail/img/samson.jpg" class="Img" alt="">
 					<div class="container">
 						<h2> Фонтан Самсон </h2>
 					</div>
