--- a/detail/Samson.html
+++ b/detail/Samson.html
@@ -29,7 +29,7 @@
                 <h2> Фонтан Самсон </h2>
             </div>
             <div>
-                <img src="img/Samson.jpg">
+                <img src="img/samson.jpg">
             </div>
             <h2> Історія </h2>
 
