--- a/index.html
+++ b/index.html
@@ -399,6 +399,16 @@
 				</div>
 			</article>
 
+			<article id="VolodymyrCathedral">
+				<div class="polaroid">
+					<a href="detail/VolodymyrCathedral.html" />
+					<img src="detail/img/VolodymyrCathedral.jpg" class="Img" alt="">
+					<div class="container">
+						<h2> Володимирський собор  </h2>
+					</div>
+				</div>
+			</article>
+
 		</div>
 
 		<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
