--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- стрелку верх переделать -->
+<!-- Object.keys(document.querySelectorAll('.mainPage li')).length Київ -->
 
 <!DOCTYPE HTML>
 <html>
@@ -15,7 +16,10 @@
 
 <body>
 
+	<!-- <script src="js/Kyiv.js"></script> -->
 	<script src="js/script.js"></script>
+
+
 	<!-- <script src="js/preloader.js"></script> -->
 
 
@@ -57,12 +61,12 @@
 
 	</header>
 
-
+	<div class="con"></div>
+	<div id="scrolTop" class="isShowBtn isShowBtn_hide ">
+		<i class="icon-caret-up"></i>
+	</div>
 	<div class="wrapper">
-		<div class="con"></div>
-		<div id="scrolTop" class="isShowBtn isShowBtn_hide ">
-			<i class="icon-caret-up"></i>
-		</div>
+
 
 		<!-- ----------------------------------------------------------------------------------------------------------------------------------------------- -->
 
@@ -518,6 +522,48 @@
 				</article>
 			</li>
 
+			<li>
+				<p class="pInput">Воздвиженська вулиця</p>
+				<article id="Vozdvizhenska">
+					<div class="polaroid">
+						<a href="detail/Vozdvizhenska.html">
+							<img src="detail/img/Vozdvizhenska.jpg" class="Img" alt="">
+							<div class="container">
+								<h2> Воздвиженська вулиця </h2>
+							</div>
+						</a>
+					</div>
+				</article>
+			</li>
+
+			<li>
+				<p class="pInput">Церква Воздвиження</p>
+				<article id="Ascension">
+					<div class="polaroid">
+						<a href="detail/Ascension.html">
+							<img src="detail/img/Ascension.jpg" class="Img" alt="">
+							<div class="container">
+								<h2> Церква Воздвиження </h2>
+							</div>
+						</a>
+					</div>
+				</article>
+			</li>
+
+			<li>
+				<p class="pInput">Замковая гора</p>
+				<article id="Castle">
+					<div class="polaroid">
+						<a href="detail/Castle.html">
+							<img src="detail/img/Castle.jpg" class="Img" alt="">
+							<div class="container">
+								<h2> Замковая гора </h2>
+							</div>
+						</a>
+					</div>
+				</article>
+			</li>
+
 		</div>
 
 		<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -530,7 +576,7 @@
 	</div>
 
 
-	</main>
+
 
 
 
