--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="../js/script.js"></script>
+    <!-- <script src="../js/IF.js"></script> -->
+
     <title> Історичні фотографії </title>
 </head>
 
@@ -27,6 +29,8 @@
                     <span></span>
                 </div>
                 <nav class="header_menu">
+                    <input type="text" class="input" id="input">
+
 
                     <ul class="header_list">
                         <li class="list_menuLi"><a class="list_menuAIFPK " href="../index.html">Київ</a></li>
@@ -38,67 +42,87 @@
     </header>
 
     <!-- Список сторінок -->
-
+    <div class="con"></div>
+    <div id="scrolTop" class="isShowBtn isShowBtn_hide ">
+        <i class="icon-caret-up"></i>
+    </div>
     <main>
         <div class="wrapper">
+
+
             <div class="istorichniFotoPage">
 
-                <article id="Andrew_DescentIFP">
-                    <div class="polaroidIFP  ">
-                        <a href="/istorichniFoto/detailIFP/Andrew_DescentIFP.html" />
-                        <div class=" containerIF">
-                            <h2> Андріївський Узвіз </h2>
+                <li>
+                    <p class="pInput">Андріївський Узвіз</p>
+                    <article id="Andrew_DescentIFP PIFP">
+                        <div class="polaroidIFP  ">
+                            <a href="/istorichniFoto/detailIFP/Andrew_DescentIFP.html" />
+                            <div class=" containerIF">
+                                <h2> Андріївський Узвіз </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </li>
 
-
-                <article id="FunicularIFP">
-                    <div class="polaroidIFP  ">
-                        <a href="/istorichniFoto/detailIFP/FunicularIFP.html" />
-                        <div class=" containerIF">
-                            <h2> Київський фунікулер </h2>
+                <li>
+                    <p class="pInput">Київський фунікулер</p>
+                    <article id="FunicularIFP PIFP">
+                        <div class="polaroidIFP  ">
+                            <a href="/istorichniFoto/detailIFP/FunicularIFP.html" />
+                            <div class=" containerIF">
+                                <h2> Київський фунікулер </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </li>
 
-
-                <article id="kreshatikIFP">
-                    <div class="polaroidIFP  ">
-                        <a href="/istorichniFoto/detailIFP/kreshatikIFP.html" />
-                        <div class=" containerIF">
-                            <h2> Хрещатик </h2>
+                <li>
+                    <p class="pInput">Хрещатик</p>
+                    <article id="kreshatikIFP PIFP">
+                        <div class="polaroidIFP  ">
+                            <a href="/istorichniFoto/detailIFP/kreshatikIFP.html" />
+                            <div class=" containerIF">
+                                <h2> Хрещатик </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                </li>
 
-                <article id="Golden_GateIFP">
-                    <div class="polaroidIFP">
-                        <a href="/istorichniFoto/detailIFP/Golden_GateIFP.html" />
-                        <div class="containerIF">
-                            <h2> Золоті ворота </h2>
+                <li>
+                    <p class="pInput">Золоті ворота</p>
+                    <article id="Golden_GateIFP PIFP">
+                        <div class="polaroidIFP">
+                            <a href="/istorichniFoto/detailIFP/Golden_GateIFP.html" />
+                            <div class="containerIF">
+                                <h2> Золоті ворота </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                <li>
 
-                <article id="Shevchenko_parkIFP">
-                    <div class="polaroidIFP">
-                        <a href="/istorichniFoto/detailIFP/Shevchenko_parkIFP.html" />
-                        <div class="containerIF">
-                            <h2> Парк імені Тараса Шевченка </h2>
+                <li>
+                    <p class="pInput">Парк імені Тараса Шевченка</p>
+                    <article id="Shevchenko_parkIFP PIFP">
+                        <div class="polaroidIFP">
+                            <a href="/istorichniFoto/detailIFP/Shevchenko_parkIFP.html" />
+                            <div class="containerIF">
+                                <h2> Парк імені Тараса Шевченка </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
+                    </article>
+                <li>
 
-                <article id="SamsonIFP">
-                    <div class="polaroidIFP">
-                        <a href="/istorichniFoto/detailIFP/Samson.html" />
-                        <div class="containerIF">
-                            <h2> Фонтан Самсон </h2>
+                <li>
+                    <p class="pInput">Фонтан Самсон</p>
+                    <article id="SamsonIFP PIFP">
+                        <div class="polaroidIFP">
+                            <a href="/istorichniFoto/detailIFP/Samson.html" />
+                            <div class="containerIF">
+                                <h2> Фонтан Самсон </h2>
+                            </div>
                         </div>
-                    </div>
-                </article>
-
+                    </article>
+                </li>
 
 
 
