--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" id="logo" href="logo/chestnut-leaf-465729.webp" type="image/x-icon">
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
