--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" id="logo" href="logo/chestnut-leaf-465729.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="../logo/chestnut-leaf-465729.webp" type="image/x-icon">
 
     <link rel="stylesheet" href="../../css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
