--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 					<h1 class="h1 BK">Київ</h1>
 				</a>
 				<!-- <h1 class="h1IstorichniFoto">Історичні фотографії</h1> -->
-				<div class="header_burger">
+				<!-- <div class="header_burger">
 					<span></span>
-				</div>
+				</div> -->
 
 				<nav class="header_menu">
 
@@ -77,7 +77,7 @@
 
 
 
-		<div class="mainPage">
+		<div id="list" class="mainPage">
 
 
 			<li>
@@ -95,13 +95,13 @@
 			</li>
 
 			<li>
-				<p class="pInput">Будинок турбінний</p>
+				<p class="pInput">Будинок Листовничого</p>
 				<article id="dom_bylgakava">
 					<div class="polaroid">
 						<a href="detail/dom_bylgakava.html">
 							<img src="detail/img/dom_bylgakava.jpg" class="Img">
 							<div class="container">
-								<h2> Будинок турбінний </h2>
+								<h2> Будинок Листовничого </h2>
 							</div>
 						</a>
 					</div>
