--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../logo/chestnut-leaf-465729.webp" type="image/x-icon">
 
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="../js/script.js"></script>
     <!-- <script src="../js/IF.js"></script> -->
@@ -52,16 +52,16 @@
         <div class="wrapper">
 
 
-            <div class="istorichniFotoPage">
+            <div id="list" class="istorichniFotoPage">
 
                 <li>
                     <p class="pInput">Андріївський Узвіз</p>
                     <article id="Andrew_DescentIFP PIFP">
                         <div class="polaroidIFP  ">
-                            <a href="/istorichniFoto/detailIFP/Andrew_DescentIFP.html" />
-                            <div class=" containerIF">
-                                <h2> Андріївський Узвіз </h2>
-                            </div>
+                            <a href="detailIFP/Andrew_DescentIFP.html">
+                                <div class=" containerIF">
+                                    <h2> Андріївський Узвіз </h2>
+                                </div>
                         </div>
                     </article>
                 </li>
@@ -70,10 +70,10 @@
                     <p class="pInput">Київський фунікулер</p>
                     <article id="FunicularIFP PIFP">
                         <div class="polaroidIFP  ">
-                            <a href="/istorichniFoto/detailIFP/FunicularIFP.html" />
-                            <div class=" containerIF">
-                                <h2> Київський фунікулер </h2>
-                            </div>
+                            <a href="detailIFP/FunicularIFP.html">
+                                <div class=" containerIF">
+                                    <h2> Київський фунікулер </h2>
+                                </div>
                         </div>
                     </article>
                 </li>
@@ -82,10 +82,10 @@
                     <p class="pInput">Хрещатик</p>
                     <article id="kreshatikIFP PIFP">
                         <div class="polaroidIFP  ">
-                            <a href="/istorichniFoto/detailIFP/kreshatikIFP.html" />
-                            <div class=" containerIF">
-                                <h2> Хрещатик </h2>
-                            </div>
+                            <a href="detailIFP/kreshatikIFP.html">
+                                <div class=" containerIF">
+                                    <h2> Хрещатик </h2>
+                                </div>
                         </div>
                     </article>
                 </li>
@@ -94,10 +94,10 @@
                     <p class="pInput">Золоті ворота</p>
                     <article id="Golden_GateIFP PIFP">
                         <div class="polaroidIFP">
-                            <a href="/istorichniFoto/detailIFP/Golden_GateIFP.html" />
-                            <div class="containerIF">
-                                <h2> Золоті ворота </h2>
-                            </div>
+                            <a href="detailIFP/Golden_GateIFP.html">
+                                <div class="containerIF">
+                                    <h2> Золоті ворота </h2>
+                                </div>
                         </div>
                     </article>
                 <li>
@@ -106,10 +106,10 @@
                     <p class="pInput">Парк імені Тараса Шевченка</p>
                     <article id="Shevchenko_parkIFP PIFP">
                         <div class="polaroidIFP">
-                            <a href="/istorichniFoto/detailIFP/Shevchenko_parkIFP.html" />
-                            <div class="containerIF">
-                                <h2> Парк імені Тараса Шевченка </h2>
-                            </div>
+                            <a href="detailIFP/Shevchenko_parkIFP.html">
+                                <div class="containerIF">
+                                    <h2> Парк імені Тараса Шевченка </h2>
+                                </div>
                         </div>
                     </article>
                 <li>
@@ -118,10 +118,10 @@
                     <p class="pInput">Фонтан Самсон</p>
                     <article id="SamsonIFP PIFP">
                         <div class="polaroidIFP">
-                            <a href="/istorichniFoto/detailIFP/Samson.html" />
-                            <div class="containerIF">
-                                <h2> Фонтан Самсон </h2>
-                            </div>
+                            <a href="detailIFP/Samson.html">
+                                <div class="containerIF">
+                                    <h2> Фонтан Самсон </h2>
+                                </div>
                         </div>
                     </article>
                 </li>
@@ -131,8 +131,9 @@
 
 
 
-                <div>
-                </div>
+
+            </div>
+        </div>
 
     </main>
 
