--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="../js/script.js"></script>
+    <script src="https://kit.fontawesome.com/5f00d71aea.js" crossorigin="anonymous"></script>
+
     <!-- <script src="../js/IF.js"></script> -->
 
     <title> Історичні фотографії </title>
@@ -30,17 +32,24 @@
                 <div class="header_burger">
                     <span></span>
                 </div>
-                <nav class="header_menu">
-                    <input type="text" class="input" id="input">
+                <div class="header_menu">
+                    <span class="inp">
+                        <input type="text" class="input" id="input">
+    
+                        <i id="cross" class="fa-solid fa-xmark fa-lg"></i>
+    
+                        <i id="arrow" class="fa-solid fa-arrow-right fa-lg"></i>
+                        </span>
+
 
 
                     <ul class="header_list">
                         <li class="list_menuLi"><a class="list_menuAIFPK " href="../index.html">Київ</a></li>
 
                     </ul>
-                </nav>
+                    </nav>
+                </div>
             </div>
-        </div>
     </header>
 
     <!-- Список сторінок -->
@@ -100,31 +109,31 @@
                                 </div>
                         </div>
                     </article>
-                <li>
+                    <li>
 
-                <li>
-                    <p class="pInput">Парк імені Тараса Шевченка</p>
-                    <article id="Shevchenko_parkIFP PIFP">
-                        <div class="polaroidIFP">
-                            <a href="detailIFP/Shevchenko_parkIFP.html">
-                                <div class="containerIF">
-                                    <h2> Парк імені Тараса Шевченка </h2>
+                        <li>
+                            <p class="pInput">Парк імені Тараса Шевченка</p>
+                            <article id="Shevchenko_parkIFP PIFP">
+                                <div class="polaroidIFP">
+                                    <a href="detailIFP/Shevchenko_parkIFP.html">
+                                        <div class="containerIF">
+                                            <h2> Парк імені Тараса Шевченка </h2>
+                                        </div>
                                 </div>
-                        </div>
-                    </article>
-                <li>
+                            </article>
+                            <li>
 
-                <li>
-                    <p class="pInput">Фонтан Самсон</p>
-                    <article id="SamsonIFP PIFP">
-                        <div class="polaroidIFP">
-                            <a href="detailIFP/Samson.html">
-                                <div class="containerIF">
-                                    <h2> Фонтан Самсон </h2>
-                                </div>
-                        </div>
-                    </article>
-                </li>
+                                <li>
+                                    <p class="pInput">Фонтан Самсон</p>
+                                    <article id="SamsonIFP PIFP">
+                                        <div class="polaroidIFP">
+                                            <a href="detailIFP/Samson.html">
+                                                <div class="containerIF">
+                                                    <h2> Фонтан Самсон </h2>
+                                                </div>
+                                        </div>
+                                    </article>
+                                </li>
 
 
 
