--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
+    <script src="https://kit.fontawesome.com/5f00d71aea.js" crossorigin="anonymous"></script>
 
     <title>Київ</title>
 </head>
@@ -45,9 +46,13 @@
 
 
                     <!-- <input type="text" id="input" class="input" title="City where you were born." /> -->
-
-
+                    <span class="inp">
                     <input type="text" class="input" id="input">
+
+                    <i id="cross" class="fa-solid fa-xmark fa-lg"></i>
+
+                    <i id="arrow" class="fa-solid fa-arrow-right fa-lg"></i>
+                    </span>
 
                     <ul class="header_list">
                         <li class="list_menuLi"><a class="list_menuAIFPK " href="istorichniFoto/index.html">
@@ -55,8 +60,8 @@
 							</a></li>
 
                     </ul>
-                </nav>
             </div>
+        </div>
         </div>
 
 
