--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" id="logo" href="logo/chestnut-leaf-465729.webp" type="image/x-icon">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<meta name="description" content=""Старовинний Київ: Місця та Історії"">
+	
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
     <script src="https://kit.fontawesome.com/5f00d71aea.js" crossorigin="anonymous"></script>
