--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" id="logo" href="logo/chestnut-leaf-465729.webp" type="image/x-icon">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<meta name="description" content=""Старовинний Київ: Місця та Історії"">
+	<meta name="description" content="Старовинний Київ: Місця та Історії">
 	
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
