--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="Старовинний Київ: Місця та Історії">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
