--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <title>Київ</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWPG8TK4CL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XWPG8TK4CL');
+</script>
+
+
+	
 <body>
 
     <!-- <script src="js/Kyiv.js"></script> -->
